fix position of collapsed nav bar on record page
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/branches/gus4@71627 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/css/client.css
+++ b/Site/webapp/wdkCustomization/css/client.css
@@ -41,6 +41,10 @@ h4 {
   margin-top: -42px;
 }
 
+.wdk-RecordSidebar__fixed {
+  left: -298px;
+}
+
 #trans_parent .wdk-RecordSection {
   margin-top: -84px;
   padding-top: 64px;
